<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.melvin.a04_navigation_component.ui.movie.MovieViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLayout"
        tools:context=".ui.movie.FormAddMovieFragment">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/return_button_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/add_new_movie_text"
            app:backgroundTint="@color/buttonColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="New Movie"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_movie_text_input"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/cardLayout"
            app:boxStrokeColor="@color/buttonColor"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:text="@={viewmodel.name}"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_movie_text_input"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/cardLayout"
            app:boxStrokeColor="@color/buttonColor"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_hint"
                android:text="@={viewmodel.category}"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_text_view_layout"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/cardLayout"
            app:boxStrokeColor="@color/buttonColor"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_movie_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint"
                android:text="@={viewmodel.description}"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/cardLayout"
            app:boxStrokeColor="@color/buttonColor"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_movie_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/qualification_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calification_hint"
                android:inputType="number"
                android:text="@={viewmodel.qualification}"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_button"
            android:onClick="@{() -> viewmodel.createMovie()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/submit_hint"
            android:textSize="@dimen/small_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
